--- a/templates/esports.html
+++ b/templates/esports.html
@@ -263,7 +263,7 @@
                 </div>
                 <br>
                 <div class="inputContainer">
-                    <label for="YEAR">YEAR </label>
+                    <label for="YEAR1">YEAR </label>
                     <fieldset>
                         
                         <p>
@@ -319,12 +319,12 @@
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="BRANCH2">Branch</label>
-                        <input type="text" name="BRANCH2" required />
+                        <label for="Branch2">Branch</label>
+                        <input type="text" name="Branch2" required />
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="YEAR">YEAR </label>
+                        <label for="YEAR2">YEAR </label>
                         <fieldset>
                             
                             <p>
@@ -379,12 +379,12 @@
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="BRANCH3">Branch</label>
-                        <input type="text" name="BRANCH3" required />
+                        <label for="Branch3">Branch</label>
+                        <input type="text" name="Branch3" required />
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="YEAR">YEAR </label>
+                        <label for="YEAR3">YEAR </label>
                         <fieldset>
                             
                             <p>
@@ -439,12 +439,12 @@
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="BRANCH4">Branch</label>
-                        <input type="text" name="BRANCH4" required />
+                        <label for="Branch4">Branch</label>
+                        <input type="text" name="Branch4" required />
                     </div>
                     <br>
                     <div class="inputContainer">
-                        <label for="YEAR">YEAR </label>
+                        <label for="YEAR4">YEAR </label>
                         <fieldset>
                             
                             <p>
