--- a/templates/fifa.html
+++ b/templates/fifa.html
@@ -88,6 +88,11 @@
                 </div>
                 <br>
                 <div class="inputContainer">
+                    <label for="Phno">Mobile No.</label>
+                    <input type="number" name="Phno" required />
+                </div>
+                <br>
+                <div class="inputContainer">
                     <label for="YEAR">YEAR </label>
                     <fieldset>
                         
