--- a/templates/esports.html
+++ b/templates/esports.html
@@ -188,27 +188,27 @@
                         
                         <p>
                             <label class="radio-inline">
-                                <input type="radio" name="YEAR" checked/>
+                                <input type="radio" name="YEAR" value="1st year"checked/>
                                 <i></i>
                                 <span>1st Year</span>
                               </label>
                               <label class="radio-inline">
-                                <input type="radio" name="YEAR"/>
+                                <input type="radio" name="YEAR" value="2nd year"/>
                                 <i></i>
                                 <span>2nd Year</span>
                               </label>
                               <label>
-                                <input type="radio" name="YEAR"/>
+                                <input type="radio" name="YEAR" value="3rd year"/>
                                 <i></i>
                                 <span>3rd Year</span>
                               </label>
                               <label>
-                                <input type="radio" name="YEAR"/>
+                                <input type="radio" name="YEAR" value="4th year"/>
                                 <i></i>
                                 <span>4th Year</span>
                               </label>
                               <label>
-                                 <input type="radio" name="YEAR"/>
+                                 <input type="radio" name="YEAR" value="PG year"/>
                                  <i></i>
                                  <span>PG Year</span>
                                </label>
