--- a/templates/message.html
+++ b/templates/message.html
@@ -17,7 +17,7 @@
     <div class='center'>
 
     <h1><center>{{message}}</center></h1>
-    <a href="{% url 'register' %}"><center><button class='button-29'>Go to Form</button></center></a>
+    <a href="{% url 'register' %}"><center><button >Go to Form</button></center></a>
     </div>
 </body>
 </html>
