--- a/static/orion.css
+++ b/static/orion.css
@@ -288,6 +288,8 @@
 
 }
 
+
+
 /* h3 {
     text-align: center;
 
@@ -369,8 +371,8 @@ display:flex;
 }
  button, button::after {
     float:left;
-    width: 380px;
-    height: 86px;
+    width: 280px;
+    height: 86px; 
     font-size: 36px;
     font-family: Minecraftia;
     background: linear-gradient(45deg, transparent 5%, #FF013C 5%);
@@ -455,3 +457,6 @@ display:flex;
     }
   } 
 
+h6{
+  font-size:10px;
+}
