--- a/templates/esports.html
+++ b/templates/esports.html
@@ -273,27 +273,27 @@
                         
                         <p>
                             <label class="radio-inline">
-                                <input type="radio" name="YEAR1" checked/>
+                                <input type="radio" name="YEAR1" value="1st year"  checked/>
                                 <i></i>
                                 <span>1st Year</span>
                               </label>
                               <label class="radio-inline">
-                                <input type="radio" name="YEAR1"/>
+                                <input type="radio" name="YEAR1" value="2nd year"/>
                                 <i></i>
                                 <span>2nd Year</span>
                               </label>
                               <label>
-                                <input type="radio" name="YEAR1"/>
+                                <input type="radio" name="YEAR1" value="3rd year"/>
                                 <i></i>
                                 <span>3rd Year</span>
                               </label>
                               <label>
-                                <input type="radio" name="YEAR1"/>
+                                <input type="radio" name="YEAR1" value="4th year"/>
                                 <i></i>
                                 <span>4th Year</span>
                               </label>
                               <label>
-                                 <input type="radio" name="YEAR1"/>
+                                 <input type="radio" name="YEAR1" value="PG year"/>
                                  <i></i>
                                  <span>PG Year</span>
                                </label>
@@ -334,27 +334,27 @@
                             
                             <p>
                                 <label class="radio-inline">
-                                    <input type="radio" name="YEAR2" checked/>
+                                    <input type="radio" name="YEAR2" value="1st year" checked/>
                                     <i></i>
                                     <span>1st Year</span>
                                   </label>
                                   <label class="radio-inline">
-                                    <input type="radio" name="YEAR2"/>
+                                    <input type="radio" name="YEAR2" value="2nd year"/>
                                     <i></i>
                                     <span>2nd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR2"/>
+                                    <input type="radio" name="YEAR2" value="3rd year"/>
                                     <i></i>
                                     <span>3rd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR2"/>
+                                    <input type="radio" name="YEAR2" value="4th year"/>
                                     <i></i>
                                     <span>4th Year</span>
                                   </label>
                                   <label>
-                                     <input type="radio" name="YEAR2"/>
+                                     <input type="radio" name="YEAR2" value="PG year"/>
                                      <i></i>
                                      <span>PG Year</span>
                                    </label>
@@ -394,27 +394,27 @@
                             
                             <p>
                                 <label class="radio-inline">
-                                    <input type="radio" name="YEAR3" checked/>
+                                    <input type="radio" name="YEAR3" value="1st year" checked/>
                                     <i></i>
                                     <span>1st Year</span>
                                   </label>
                                   <label class="radio-inline">
-                                    <input type="radio" name="YEAR3"/>
+                                    <input type="radio" name="YEAR3" value="2nd year" />
                                     <i></i>
                                     <span>2nd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR3"/>
+                                    <input type="radio" name="YEAR3" value="]3rd year"/>
                                     <i></i>
                                     <span>3rd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR3"/>
+                                    <input type="radio" name="YEAR3" value="4th year"/>
                                     <i></i>
                                     <span>4th Year</span>
                                   </label>
                                   <label>
-                                     <input type="radio" name="YEAR3"/>
+                                     <input type="radio" name="YEAR3" value="PG year"/>
                                      <i></i>
                                      <span>PG Year</span>
                                    </label>
@@ -454,27 +454,27 @@
                             
                             <p>
                                 <label class="radio-inline">
-                                    <input type="radio" name="YEAR4" checked/>
+                                    <input type="radio" name="YEAR4" value="1st year" checked/>
                                     <i></i>
                                     <span>1st Year</span>
                                   </label>
                                   <label class="radio-inline">
-                                    <input type="radio" name="YEAR4"/>
+                                    <input type="radio" name="YEAR4" value="2nd year"/>
                                     <i></i>
                                     <span>2nd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR4"/>
+                                    <input type="radio" name="YEAR4" value="3rd year"/>
                                     <i></i>
                                     <span>3rd Year</span>
                                   </label>
                                   <label>
-                                    <input type="radio" name="YEAR4"/>
+                                    <input type="radio" name="YEAR4" value="4th year"/>
                                     <i></i>
                                     <span>4th Year</span>
                                   </label>
                                   <label>
-                                     <input type="radio" name="YEAR4"/>
+                                     <input type="radio" name="YEAR4" value="PG year"/>
                                      <i></i>
                                      <span>PG Year</span>
                                    </label>
