updated team size to 1

--- a/templates/esports.html
+++ b/templates/esports.html
@@ -254,17 +254,17 @@
             <br>
                 <div class="inputContainer">
                     <label for="NAME1">Name </label>
-                    <input type="name" name="NAME1" required />
+                    <input type="name" name="NAME1"  />
                 </div>
                 <br>
                 <div class="inputContainer">
                     <label for="ROLLNO1">Roll No.</label>
-                    <input type="number" name="ROLLNO1"  autofocus required />
+                    <input type="number" name="ROLLNO1"  autofocus  />
                 </div>
                 <br>
                 <div class="inputContainer">    
                     <label for="Branch1">Branch</label>
-                    <input type="text" name="Branch1" required />
+                    <input type="text" name="Branch1"  />
                 </div>
                 <br>
                 <div class="inputContainer">
@@ -304,7 +304,7 @@
                     <br><br>
                     <div class="inputContainer">
                         <label for="ID1">Valo/Codm id</label>
-                        <input type="text" name="ID1" required />
+                        <input type="text" name="ID1"  />
                     </div>
             </div>
             <div >
@@ -315,17 +315,17 @@
                     
                     <div class="inputContainer">
                         <label for="NAME2">Name </label>
-                        <input type="name" name="NAME2" required />
+                        <input type="name" name="NAME2"  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="ROLLNO2">Roll No.</label>
-                        <input type="number" name="ROLLNO2"  autofocus required />
+                        <input type="number" name="ROLLNO2"  autofocus  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="Branch2">Branch</label>
-                        <input type="text" name="Branch2" required />
+                        <input type="text" name="Branch2"  />
                     </div>
                     <br>
                     <div class="inputContainer">
@@ -363,7 +363,7 @@
                         </fieldset>
                         <div class="inputContainer">
                             <label for="ID2">Valo/Codm id</label>
-                            <input type="text" name="ID2" required />
+                            <input type="text" name="ID2"  />
                         </div>
                 </div>
             </div>
@@ -375,17 +375,17 @@
                     
                     <div class="inputContainer">
                         <label for="NAME3">Name </label>
-                        <input type="name" name="NAME3" required />
+                        <input type="name" name="NAME3"  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="ROLLNO3">Roll No.</label>
-                        <input type="number" name="ROLLNO3"  autofocus required />
+                        <input type="number" name="ROLLNO3"  autofocus  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="Branch3">Branch</label>
-                        <input type="text" name="Branch3" required />
+                        <input type="text" name="Branch3"  />
                     </div>
                     <br>
                     <div class="inputContainer">
@@ -423,7 +423,7 @@
                         </fieldset>
                         <div class="inputContainer">
                             <label for="ID3">Valo/Codm id</label>
-                            <input type="text" name="ID3" required />
+                            <input type="text" name="ID3"  />
                         </div>
                 </div>
             </div>
@@ -435,17 +435,17 @@
                     
                     <div class="inputContainer">
                         <label for="NAME4">Name </label>
-                        <input type="name" name="NAME4" required />
+                        <input type="name" name="NAME4"  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="ROLLNO4">Roll No.</label>
-                        <input type="number" name="ROLLNO4"  autofocus required />
+                        <input type="number" name="ROLLNO4"  autofocus  />
                     </div>
                     <br>
                     <div class="inputContainer">
                         <label for="Branch4">Branch</label>
-                        <input type="text" name="Branch4" required />
+                        <input type="text" name="Branch4"  />
                     </div>
                     <br>
                     <div class="inputContainer">
@@ -483,7 +483,7 @@
                         </fieldset>
                         <div class="inputContainer">
                             <label for="ID4">Valo/Codm id</label>
-                            <input type="text" name="ID4" required />
+                            <input type="text" name="ID4"  />
                         </div>
                 </div> 
             </div>
